# langchain-projects

./: pyproject.toml
document-q&a-chatbot/: q_n_a_chatbot.py
rag-system/: chatbot.py  data.txt
simple-chatbot/: main.py
