[project]
name = "langchain-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-google-genai>=4.0.0",
    "langchain-pinecone>=0.2.13",
    "pinecone>=7.3.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
    "tiktoken>=0.12.0",
]
